--- a/cs/literatura.tex
+++ b/cs/literatura.tex
@@ -19,6 +19,7 @@
 %%% položku, seznam se automaticky vynechá.
 
 \printbibliography
+\addcontentsline{toc}{chapter}{Seznam použité literatury}
 %\bibliography{literatura}
 
 %%% Kdybyste chtěli bibliografii vytvářet ručně (bez bibTeXu), lze to udělat
